Add a basic period model

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "backbone": "^1.1.2",
     "backbone.stickit": "^0.8.0",
+    "backbone.validation": "thedersen/backbone.validation#v0.9.1",
     "d3": "^3.4.8",
     "jquery": "^1.11.0",
     "underscore": "^1.6.0"
