--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "backbone": "^1.1.2",
     "backbone-validation": "thedersen/backbone.validation#v0.9.1",
     "backbone.stickit": "^0.8.0",
+    "d3": "^3.4.8",
+    "jquery": "^1.11.0",
+    "pegjs": "^0.8.0",
+    "underscore": "^1.6.0"
+  },
+  "devDependencies": {
     "brfs": "1.0.0",
     "browserify": "^4.1.2",
     "browserify-shim": "^3.5.0",
-    "d3": "^3.4.8",
-    "jquery": "^1.11.0",
+    "mocha": "^1.18.0",
     "node-underscorify": "0.0.9",
-    "pegjs": "^0.8.0",
-    "underscore": "^1.6.0",
+    "testling": "^1.6.1",
     "watchify": "^0.9.0"
   },
   "browserify": {
@@ -35,5 +39,20 @@
         "jquery:jQuery"
       ]
     }
+  },
+  "testling": {
+    "harness": "mocha",
+    "files": "src/tests/*.js",
+    "browsers": [
+      "firefox/24..latest",
+      "chrome/latest",
+      "ie/10..latest",
+      "safari/6..latest",
+      "opera/latest",
+      "ipad/6..latest"
+    ]
+  },
+  "scripts": {
+    "test": "mocha src/tests/*.js"
   }
 }
