--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "backbone.stickit": "^0.8.0",
     "d3": "^3.4.8",
     "jquery": "^1.11.0",
+    "json-stable-stringify": "^1.0.0",
     "pegjs": "^0.8.0",
     "underscore": "^1.6.0"
   },
