Use backbone-relational; add periodization models
I think using `backbone-relational` makes a lot of sense for us. It's a
PITH to define relationships in constructor/parse/listening, which is
what that package deals with.

Additionally, got rid of all that toJSONLD business- just using toJSON
now.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "backbone": "^1.1.2",
+    "backbone-relational": "^0.8.8",
     "backbone-validation": "thedersen/backbone.validation#v0.9.1",
     "backbone.stickit": "^0.8.0",
     "d3": "^3.4.8",
