--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json-stable-stringify": "^1.0.0",
     "less": "^1.7.3",
     "pegjs": "^0.8.0",
+    "spin.js": "^2.0.1",
     "traverse": "^0.6.6",
     "underscore": "^1.6.0",
     "watch-lessc": "0.0.2"
