--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "Dexie": "git://github.com/ptgolden/Dexie.js#package.json",
     "backbone": "^1.1.2",
     "backbone-relational": "^0.8.8",
-    "backbone-validation": "thedersen/backbone.validation#v0.9.1",
     "backbone.stickit": "^0.8.0",
     "d3": "^3.4.8",
     "deep-equal": "^0.2.1",
@@ -40,8 +39,7 @@
   },
   "browser": {
     "jquery-bootstrap": "./lib/bootstrap.js",
-    "jquery-typeahead": "./lib/typeahead.bundle.js",
-    "backbone.validation": "backbone-validation"
+    "jquery-typeahead": "./lib/typeahead.bundle.js"
   },
   "browserify-shim": {
     "jquery-bootstrap": {
