--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fast-json-patch": "^0.4.0",
     "jquery": "^1.11.0",
     "json-stable-stringify": "^1.0.0",
+    "jsonld": "^0.3.4",
     "less": "^1.7.3",
     "n3": "^0.2.7",
     "pegjs": "^0.8.0",
