--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "n3": "^0.2.7",
     "pegjs": "^0.8.0",
     "spin.js": "^2.0.1",
+    "tablesort": "^2.0.1",
     "traverse": "^0.6.6",
     "underscore": "^1.6.0",
     "watch-lessc": "0.0.2"
