--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "brfs": "1.0.0",
     "browserify": "^9.0.3",
     "browserify-shim": "^3.5.0",
+    "dom-sandbox": "0.0.1",
     "mocha": "^1.18.0",
     "node-underscorify": "0.0.9",
     "serve": "^1.4.0",
