--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "Dexie": "git://github.com/ptgolden/Dexie.js#package.json",
     "backbone": "^1.1.2",
     "backbone.stickit": "^0.8.0",
+    "concat-stream": "^1.4.7",
+    "csv-write-stream": "^0.3.0",
     "d3": "^3.4.8",
     "deep-equal": "^0.2.1",
     "fast-json-patch": "^0.4.0",
+    "filesaver.js": "^0.1.1",
     "jquery": "^1.11.0",
     "json-stable-stringify": "^1.0.0",
     "jsonld": "^0.3.4",
