--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deep-equal": "^0.2.1",
     "fast-json-patch": "^0.4.0",
     "filesaver.js": "^0.1.1",
+    "iso-639-3": "^0.2.0",
     "jquery": "^1.11.0",
     "json-stable-stringify": "^1.0.0",
     "jsonld": "^0.3.4",
