Add more information/indexes to local patches
Local patches will now keep track of the following information:
  * The type of change that occurred. Type being one of the following:
    adding a period/collection, removing a period/collection, editing a
    period/collection, multiple of the preceding, or syncing with the
    server.
  * The affected period collections (for all patches)
  * The affected periods (for patches that only deal with a single
    period (ie, not a collection that deals with multiple periods)
  * A md5 hash of both the forward and backward patches (this will be
    especially useful for checking whether changes are local-only when
    performing a sync operation)

I'm sure I'm doing something wrong but I don't know how I should be
doing it write. Programming!

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "less": "^1.7.3",
     "n3": "^0.2.7",
     "pegjs": "^0.8.0",
+    "spark-md5": "0.0.5",
     "spin.js": "^2.0.1",
     "supermodel": "git+https://github.com/pathable/supermodel.git",
     "tablesort": "^2.0.1",
