--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "Client for browsing and editing PeriodO data.",
   "private": true,
   "dependencies": {
-    "dexie": "^1.0.4",
     "babelify": "^6.0.2",
     "backbone": "^1.1.2",
     "backbone.stickit": "^0.8.0",
@@ -13,6 +12,8 @@
     "csv-write-stream": "^0.3.0",
     "d3": "^3.4.8",
     "deep-equal": "^0.2.1",
+    "dexie": "^1.0.4",
+    "diff-match-patch": "^1.0.0",
     "fast-json-patch": "^0.4.0",
     "filesaver.js": "^0.1.1",
     "iso-639-3": "^0.2.0",
