--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "filesaver.js": "^0.1.1",
     "iso-639-3": "^0.2.0",
     "jquery": "^1.11.0",
+    "json-pointer": "^0.3.0",
     "json-stable-stringify": "^1.0.0",
     "jsonld": "^0.3.4",
     "less": "^1.7.3",
@@ -45,7 +46,13 @@
   },
   "browserify": {
     "transform": [
-      ["babelify", {"sourceMapRelative": ".", "only": "src/**"}],
+      [
+        "babelify",
+        {
+          "sourceMapRelative": ".",
+          "only": "src/**"
+        }
+      ],
       "browserify-shim",
       "node-underscorify",
       "brfs"
