--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "Client for browsing and editing PeriodO data.",
   "private": true,
   "dependencies": {
-    "babelify": "^6.0.2",
     "backbone": "^1.1.2",
     "backbone.stickit": "^0.8.0",
     "concat-stream": "^1.4.8",
@@ -21,29 +20,30 @@
     "json-pointer": "^0.3.0",
     "json-stable-stringify": "^1.0.0",
     "jsonld": "^0.3.4",
-    "less": "^1.7.3",
     "n3": "^0.2.7",
     "pegjs": "^0.8.0",
     "spark-md5": "0.0.5",
     "spin.js": "^2.0.1",
     "supermodel": "git+https://github.com/pathable/supermodel.git",
     "tablesort": "^2.0.1",
-    "traverse": "^0.6.6",
-    "underscore": "^1.8.3",
-    "watch-lessc": "0.0.2"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "babelify": "^6.0.2",
     "brfs": "1.0.0",
     "browserify": "^9.0.7",
     "browserify-shim": "^3.8.2",
     "dom-sandbox": "0.0.1",
     "exorcist": "^0.1.6",
+    "less": "^1.7.3",
     "mocha": "^1.18.0",
+    "mochify": "^2.8.1",
     "node-underscorify": "0.0.9",
-    "serve": "^1.4.0",
+    "phantomjs": "^1.9.16",
     "testling": "^1.6.1",
     "uglify-js": "^2.4.19",
-    "watchify": "^3.1.2"
+    "watchify": "^3.1.2",
+    "watch-lessc": "0.0.2"
   },
   "browserify": {
     "transform": [
@@ -89,6 +89,7 @@
   },
   "scripts": {
     "test": "mocha -R spec src/tests/*.js",
+    "test-watch": "mochify -w -R spec ./src/tests/*.js",
     "start": "serve -p 8000"
   }
 }
