Add devel option to jshintrc
I use "console", get over it

--- a/.jshintrc
+++ b/.jshintrc
@@ -8,6 +8,7 @@
     "asi": true,
     "laxcomma": true,
     "browser": true,
+    "devel": true,
     "globalstrict": true,
     "globals": {
         "module": false,
