Fix/bump tablesort

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "filesaver.js": "^0.1.1",
     "immutable": "^3.7.2",
     "iso-639-3": "^0.2.0",
+    "javascript-natural-sort": "^0.7.1",
     "jquery": "^1.11.0",
     "json-pointer": "^0.3.0",
     "json-stable-stringify": "^1.0.0",
@@ -23,7 +24,7 @@
     "pegjs": "^0.8.0",
     "spark-md5": "0.0.5",
     "spin.js": "^2.0.1",
-    "tablesort": "^2.0.1",
+    "tablesort": "^3.0.2",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
