--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "json-pointer": "^0.3.0",
     "json-stable-stringify": "^1.0.0",
     "jsonld": "^0.3.4",
+    "linkify-it": "^1.1.0",
     "n3": "^0.2.7",
     "pegjs": "^0.8.0",
     "react": "^0.13.3",
