Start to finish porting to react
  * Adds new routing logic based on route-recognizer and location-bar
    packages. This removes the dependency on backbone.
  * Listens for requests on a global EventEmitter object instead of
    having packages require the whole application
  * Ports two of the views over: backend home and backend select
  * Adds components for header and footer sections

--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "json-stable-stringify": "^1.0.0",
     "jsonld": "^0.3.4",
     "linkify-it": "^1.1.0",
+    "location-bar": "^2.0.0",
     "n3": "^0.2.7",
     "pegjs": "^0.8.0",
     "react": "^0.13.3",
     "react-paginate": "^0.1.31",
+    "route-recognizer": "^0.1.5",
+    "router": "^1.1.1",
     "spark-md5": "0.0.5",
     "spin.js": "^2.0.1",
     "tablesort": "^3.0.2",
