--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "diff-match-patch": "^1.0.0",
     "fast-json-patch": "^0.5.2",
     "filesaver.js": "^0.1.1",
+    "fuzzy": "^0.1.0",
     "immfacet": "^0.5.0",
     "immpatch": "^0.2.0",
     "immutable": "^3.7.2",
