--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "babelify": "^6.0.2",
     "brfs": "1.0.0",
-    "browserify": "^10.1.3",
+    "browserify": "^10.2.4",
     "browserify-shim": "^3.8.2",
     "dom-sandbox": "0.0.1",
     "exorcist": "^0.4.0",
@@ -50,8 +50,8 @@
     "phantomjs": "^1.9.16",
     "testling": "^1.6.1",
     "uglify-js": "^2.4.19",
-    "watchify": "^3.2.1",
-    "watch-lessc": "0.0.2"
+    "watch-lessc": "0.0.2",
+    "watchify": "^3.2.2"
   },
   "browserify": {
     "transform": [
