--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3": "^3.4.8",
     "dexie": "^1.0.4",
     "diff-match-patch": "^1.0.0",
+    "fast-diff": "^1.0.1",
     "fast-json-patch": "^0.5.2",
     "filesaver.js": "^0.1.1",
     "fuzzy": "^0.1.0",
