--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "diff-match-patch": "^1.0.0",
     "fast-diff": "^1.0.1",
     "fast-json-patch": "^0.5.2",
+    "fastclick": "^1.0.6",
     "filesaver.js": "^0.1.1",
     "fuzzy": "^0.1.0",
     "immfacet": "^0.6.1",
