--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
         }
       ],
       "browserify-shim",
-      "node-underscorify",
       "brfs"
     ]
   },
@@ -95,6 +94,12 @@
     ]
   },
   "scripts": {
+    "preversion": "npm test && npm run isMaster && npm run matchesRemote",
+    "version": "make",
+    "postversion": "git push && git push --tags",
+    "isMaster": "test master = $(git rev-parse --abbrev-ref HEAD)",
+    "matchesRemote": "test $(git rev-parse @) = $(git rev-parse @{u})",
+
     "test": "mochify -R spec ./src/tests/*.js",
     "test-watch": "mochify -w -R spec ./src/tests/*.js",
     "start": "serve -p 8000"
