--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "d3": "^3.4.8",
     "dexie": "^1.0.4",
     "diff-match-patch": "^1.0.0",
+    "envify": "^3.4.0",
     "fast-diff": "^1.0.1",
     "fast-json-patch": "^0.5.2",
     "fastclick": "^1.0.6",
