--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "description": "Client for browsing and editing PeriodO data.",
   "private": true,
   "dependencies": {
-    "concat-stream": "^1.4.8",
-    "csv-write-stream": "^0.3.0",
-    "d3": "^3.4.8",
+    "d3": "^3.5.16",
     "dexie": "^1.0.4",
     "diff-match-patch": "^1.0.0",
-    "envify": "^3.4.0",
     "fast-diff": "^1.0.1",
     "fast-json-patch": "^0.5.2",
     "fastclick": "^1.0.6",
@@ -21,7 +18,6 @@
     "immutable": "^3.7.2",
     "iso-639-3": "^0.2.0",
     "javascript-natural-sort": "^0.7.1",
-    "jquery": "^2.1.4",
     "json-pointer": "^0.3.0",
     "json-stable-stringify": "^1.0.0",
     "jsonld": "^0.3.4",
@@ -41,7 +37,7 @@
     "babelify": "^6.0.2",
     "brfs": "1.0.0",
     "browserify": "^10.2.4",
-    "browserify-shim": "^3.8.2",
+    "envify": "^3.4.0",
     "exorcist": "^0.4.0",
     "less": "^1.7.3",
     "mocha": "^1.18.0",
@@ -54,33 +50,7 @@
     "watchify": "^3.3.1"
   },
   "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "sourceMapRelative": ".",
-          "only": "src/**"
-        }
-      ],
-      "browserify-shim",
-      "brfs"
-    ]
-  },
-  "browser": {
-    "jquery-bootstrap": "./lib/bootstrap.js",
-    "jquery-typeahead": "./lib/typeahead.bundle.js"
-  },
-  "browserify-shim": {
-    "jquery-bootstrap": {
-      "depends": [
-        "jquery:jQuery"
-      ]
-    },
-    "jquery-typeahead": {
-      "depends": [
-        "jquery:jQuery"
-      ]
-    }
+    "transform": ["babelify", "brfs"]
   },
   "testling": {
     "harness": "mocha",
