--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "d3": "^3.5.16",
+    "debounce": "^1.0.0",
     "dexie": "^1.0.4",
     "diff-match-patch": "^1.0.0",
     "fast-diff": "^1.0.1",
@@ -27,10 +28,10 @@
     "pegjs": "^0.8.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-hyperscript": "^2.4.0",
     "route-recognizer": "^0.1.5",
     "router": "^1.1.1",
-    "spark-md5": "0.0.5",
-    "underscore": "^1.8.3"
+    "spark-md5": "0.0.5"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
