--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-hyperscript": "^2.4.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-immutablejs": "0.0.8",
+    "redux-thunk": "^2.1.0",
     "route-recognizer": "^0.1.5",
     "router": "^1.1.1",
     "spark-md5": "0.0.5"
