Fix error in package.json config

--- a/package.json
+++ b/package.json
@@ -58,12 +58,15 @@
   },
   "browserify": {
     "transform": [
-      "babelify",
-      {
-        "presets": [
-          "es2015"
-        ]
-      },
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ],
+      "envify",
       "brfs"
     ]
   },
