--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "Client for browsing and editing PeriodO data.",
   "private": true,
   "dependencies": {
+    "basscss": "^8.0.1",
+    "basscss-addons": "^1.0.0-beta4",
     "d3": "^3.5.16",
     "debounce": "^1.0.0",
     "dexie": "^1.0.4",
@@ -25,6 +27,7 @@
     "linkify-it": "^1.1.0",
     "location-bar": "^2.0.0",
     "n3": "^0.2.7",
+    "normalize.css": "^4.1.1",
     "pegjs": "^0.8.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
@@ -40,8 +43,6 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
-    "basscss": "^8.0.1",
-    "basscss-addons": "^1.0.0-beta4",
     "brfs": "1.0.0",
     "browserify": "^10.2.4",
     "envify": "^3.4.0",
