--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-immutablejs": "0.0.8",
+    "redux-mock-store": "^1.1.0",
     "redux-thunk": "^2.1.0",
     "route-recognizer": "^0.1.5",
     "router": "^1.1.1",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
+    "blue-tape": "^0.2.0",
     "brfs": "1.0.0",
     "browserify": "^10.2.4",
     "envify": "^3.4.0",
