Move generic functions out into a separate repository (periodo-utils)

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "location-bar": "^2.0.0",
     "n3": "^0.2.7",
     "normalize.css": "^4.1.1",
-    "pegjs": "^0.8.0",
+    "pegjs": "^0.9.0",
+    "periodo-utils": "^3.0.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-hyperscript": "^2.4.0",
