--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "json-pointer": "^0.3.0",
     "json-stable-stringify": "^1.0.0",
     "jsonld": "^0.3.4",
+    "language-tags": "^1.0.5",
     "linkify-it": "^1.1.0",
     "location-bar": "^2.0.0",
     "n3": "^0.2.7",
