--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "description": "Client for browsing and editing PeriodO data.",
   "private": true,
   "dependencies": {
-    "basscss": "^8.0.1",
-    "basscss-addons": "^1.0.0-beta4",
     "d3": "^3.5.16",
     "debounce": "^1.0.0",
     "dexie": "^1.0.4",
@@ -27,7 +25,6 @@
     "linkify-it": "^1.1.0",
     "location-bar": "^2.0.0",
     "n3": "^0.2.7",
-    "normalize.css": "^4.1.1",
     "pegjs": "^0.9.0",
     "periodo-utils": "^4.0.0",
     "react": "^15.0.1",
@@ -36,26 +33,28 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-immutablejs": "0.0.8",
-    "redux-mock-store": "^1.1.0",
     "redux-thunk": "^2.1.0",
-    "route-recognizer": "^0.1.5",
-    "router": "^1.1.1",
+    "routes": "^2.1.0",
     "spark-md5": "0.0.5"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.2.0",
+    "basscss": "^8.0.1",
+    "basscss-addons": "^1.0.0-beta4",
     "blue-tape": "^0.2.0",
     "brfs": "1.0.0",
     "browserify": "^10.2.4",
     "envify": "^3.4.0",
     "exorcist": "^0.4.0",
     "fake-indexeddb": "^1.0.6",
+    "normalize.css": "^4.1.1",
     "postcss": "^5.0.19",
     "postcss-cli": "^2.5.1",
     "postcss-cssnext": "^2.5.1",
     "postcss-import": "^8.1.0",
     "react-hyperscript": "^2.4.0",
+    "redux-mock-store": "^1.1.0",
     "source-map": "^0.4.4",
     "tape": "^4.5.1",
     "uglify-js": "^2.4.19",
