Allow any BCP47 language/script tags.
Switch from iso-639-3 to language-tags, and support abbreviated forms of
language tags (two-letter language codes and suppressed script tags).

--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "immfacet": "^0.6.1",
     "immpatch": "^0.2.0",
     "immutable": "^3.7.2",
-    "iso-639-3": "^0.2.0",
     "javascript-natural-sort": "^0.7.1",
     "jquery": "^2.1.4",
     "json-pointer": "^0.3.0",
     "json-stable-stringify": "^1.0.0",
     "jsonld": "^0.3.4",
+    "language-subtag-registry": "^0.3.17",
     "language-tags": "^1.0.5",
     "linkify-it": "^1.1.0",
     "location-bar": "^2.0.0",
