Use ecmaversion 2017 for eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
   "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": 2017
+  },
   "env": {
-    "es6": true,
     "node": true,
     "browser": true
   },
