--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "redux-thunk": "^2.1.0",
     "route-recognizer": "^0.2.9",
     "routes": "^2.1.0",
-    "spark-md5": "0.0.5"
+    "spark-md5": "0.0.5",
+    "union-type": "^0.3.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
