--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axs-ui": "^1.0.4",
     "d3": "^3.5.16",
     "debounce": "^1.0.0",
-    "dexie": "^1.0.4",
+    "dexie": "^2.0.0-beta.10",
     "diff-match-patch": "^1.0.0",
     "fast-diff": "^1.0.1",
     "fast-json-patch": "^0.5.2",
