--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     ]
   },
   "scripts": {
-    "test": "tape ./src/tests/*.js",
+    "test": "tape ./src/**/test/*.js",
     "start": "serve -p 8000"
   }
 }
