--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "linkify-it": "^1.1.0",
     "location-hash-stream": "^2.0.0",
     "n3": "^0.2.7",
+    "periodo-date-parser": "^1.0.0",
     "periodo-utils": "^4.0.0",
     "pump": "^1.0.2",
     "react": "^15.0.1",
+    "react-autocomplete": "^1.5.3",
     "react-dom": "^15.0.1",
     "react-hyperscript": "^2.4.0",
     "react-redux": "^4.4.5",
