--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "react": "^15.0.1",
     "react-autocomplete": "^1.5.3",
     "react-dom": "^15.0.1",
+    "react-geomicons": "^2.1.0",
     "react-hyperscript": "^2.4.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "respin": "^1.0.1",
     "route-parser": "0.0.5",
     "spark-md5": "0.0.5",
     "through2": "^2.0.3",
