--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axs": "^1.0.6",
     "axs-ui": "^1.0.4",
+    "concat-stream": "^1.6.0",
     "d3": "^3.5.16",
     "dexie": "^2.0.0-beta.10",
     "diff-match-patch": "^1.0.0",
@@ -38,6 +39,7 @@
     "respin": "^1.0.1",
     "route-parser": "0.0.5",
     "spark-md5": "0.0.5",
+    "stream-array": "^1.1.2",
     "through2": "^2.0.3",
     "union-type": "^0.3.3"
   },
