--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fast-json-patch": "^0.5.2",
     "fastclick": "^1.0.6",
     "filesaver.js": "^0.1.1",
+    "from2-array": "0.0.4",
     "fuzzy": "^0.1.0",
     "immpatch": "^0.2.0",
     "immutable": "^3.7.2",
@@ -38,7 +39,6 @@
     "respin": "^1.0.1",
     "route-parser": "0.0.5",
     "spark-md5": "0.0.5",
-    "stream-array": "^1.1.2",
     "stream-consume": "^0.1.0",
     "through2": "^2.0.3",
     "union-type": "^0.3.3"
