--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     ]
   },
   "scripts": {
-    "test": "NODE_PATH=. tape ./src/**/test/*.js",
+    "test": "NODE_PATH=. tape ./src/**/test/*.js ./lib/**/test/*.js",
     "start": "serve -p 8000"
   }
 }
