--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ramda": "^0.24.0",
     "react": "^15.0.1",
     "react-aria-menubutton": "^5.0.0",
-    "react-autocomplete": "^1.5.9",
+    "react-autosuggest": "^9.3.1",
     "react-dom": "^15.0.1",
     "react-geomicons": "^2.1.0",
     "react-hyperscript": "^2.4.0",
