--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "n3": "^0.2.7",
     "periodo-date-parser": "^1.0.0",
     "pump": "^1.0.2",
+    "querystring-browser": "^1.0.4",
     "ramda": "^0.24.0",
     "react": "^15.0.1",
     "react-aria-menubutton": "^5.0.0",
@@ -63,6 +64,9 @@
     "transform": [
       "envify"
     ]
+  },
+  "browser": {
+    "querystring": "querystring-browser"
   },
   "scripts": {
     "test": "NODE_PATH=. tape ./src/**/test/*.js ./lib/**/test/*.js",
