--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -19,10 +19,10 @@
     "jsonld": "^0.4.12",
     "n3": "^0.11.1",
     "org-layout-engine": "^1.0.0",
+    "org-shell": "^1.0.0",
     "periodo-date-parser": "^1.0.0",
     "periodo-ui": "^1.0.0",
     "periodo-utils": "5.0.0-pre",
-    "querystring-browser": "^1.0.4",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -33,8 +33,5 @@
     "spark-md5": "^3.0.0",
     "through2": "^2.0.3",
     "union-type": "^0.4.0"
-  },
-  "browser": {
-    "querystring": "querystring-browser"
   }
 }
