Fix some dependency issues

--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -26,9 +26,11 @@
     "ramda": "^0.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-geomicons": "^2.1.0",
     "react-hyperscript": "^3.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "respin": "^1.0.1",
     "spark-md5": "^3.0.0",
     "through2": "^2.0.3",
