Fix references to router in periodo-app to org-shell
Also make new HOC that gives access to the locationStream

--- a/modules/periodo-ui/package.json
+++ b/modules/periodo-ui/package.json
@@ -20,6 +20,7 @@
     "fast-json-patch": "^2.0.4",
     "language-tags": "^1.0.5",
     "linkify-it": "^2.0.3",
+    "org-shell": "^1.0.0",
     "periodo-utils": "5.0.0-pre",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
