--- a/modules/org-layout-engine/package.json
+++ b/modules/org-layout-engine/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.5.10",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
+    "react-geomicons": "^2.1.0",
     "react-hyperscript": "^3.0.0",
     "stream-consume": "^0.1.0",
     "through2": "^2.0.3"
