--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babili": "0.0.12",
     "blue-tape": "^0.2.0",
     "browserify": "^14.3.0",
+    "common-shakeify": "^0.2.0",
     "envify": "^3.4.0",
     "exorcist": "^0.4.0",
     "fake-indexeddb": "^1.0.6",
@@ -19,7 +20,8 @@
   },
   "browserify": {
     "transform": [
-      "envify"
+      "envify",
+      "common-shakeify"
     ]
   },
   "scripts": {
