Lots of vaguely unrelated changes cleaning up the refactor to modules
The application is at least navigable now

--- a/modules/periodo-ui/package.json
+++ b/modules/periodo-ui/package.json
@@ -14,7 +14,7 @@
     "tape": "^4.8.0"
   },
   "dependencies": {
-    "axs": "^2.0.0-1",
+    "axs": "^1.0.6",
     "axs-ui": "^1.0.4",
     "diff-match-patch": "^1.0.0",
     "fast-json-patch": "^2.0.4",
