--- a/modules/org-layouts/package.json
+++ b/modules/org-layouts/package.json
@@ -12,7 +12,7 @@
     "debounce": "^1.0.2",
     "natsort": "^1.0.6",
     "periodo-ui": "^1.0.0",
-    "periodo-utils": "5.0.0-pre",
+    "periodo-utils": "^5.0.0-pre2",
     "prop-types": "^15.5.10",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
