--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "periodo-app",
-  "version": "1.0.0",
+  "version": "3.0.0-pre",
   "private": true,
   "description": "React application for browsing and editing PeriodO data",
   "main": "src/index.js",
@@ -20,9 +20,9 @@
     "n3": "^0.11.1",
     "org-layouts": "^1.0.0",
     "org-shell": "^1.0.0",
-    "periodo-date-parser": "^1.0.0",
+    "periodo-date-parser": "^1.0.1",
     "periodo-ui": "^1.0.0",
-    "periodo-utils": "5.0.0-pre",
+    "periodo-utils": "^5.0.0-pre2",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
