--- a/modules/periodo-utils/package.json
+++ b/modules/periodo-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "periodo-utils",
-  "version": "5.0.0-pre",
+  "version": "5.0.0-pre2",
   "private": true,
   "description": "",
   "main": "src/index.js",
@@ -16,7 +16,7 @@
   "dependencies": {
     "fast-diff": "^1.1.1",
     "iso-639-3": "^1.0.1",
-    "periodo-date-parser": "^1.0.0",
+    "periodo-date-parser": "^1.0.1",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
     "react-hyperscript": "^3.0.0",
