--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -23,6 +23,7 @@
     "periodo-date-parser": "^1.0.1",
     "periodo-ui": "^1.0.0",
     "periodo-utils": "^5.0.0-pre2",
+    "prop-types": "^15.5.10",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
