--- a/modules/org-layouts/package.json
+++ b/modules/org-layouts/package.json
@@ -21,7 +21,7 @@
     "ramda": "^0.24.1",
     "react": "^16.2.0",
     "react-geomicons": "^2.1.0",
-    "react-hyperscript": "^3.0.0",
+    "react-hyperscript": "github:periodo/react-hyperscript",
     "stream-consume": "^0.1.0",
     "through2": "^2.0.3"
   }
