--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -28,7 +28,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-geomicons": "^2.1.0",
-    "react-hyperscript": "^3.0.0",
+    "react-hyperscript": "github:periodo/react-hyperscript",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
