--- a/modules/periodo-ui/package.json
+++ b/modules/periodo-ui/package.json
@@ -27,7 +27,7 @@
     "react-aria-menubutton": "^5.0.2",
     "react-autosuggest": "^9.3.2",
     "react-dom": "^16.2.0",
-    "react-hyperscript": "^3.0.0",
+    "react-hyperscript": "github:periodo/react-hyperscript",
     "union-type": "^0.4.0"
   }
 }
