--- a/modules/periodo-utils/package.json
+++ b/modules/periodo-utils/package.json
@@ -19,7 +19,7 @@
     "periodo-date-parser": "^1.0.1",
     "ramda": "^0.24.1",
     "react": "^16.2.0",
-    "react-hyperscript": "^3.0.0",
+    "react-hyperscript": "github:periodo/react-hyperscript",
     "union-type": "^0.4.0"
   }
 }
