--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -17,6 +17,7 @@
     "json-pointer": "^0.6.0",
     "json-stable-stringify": "^1.0.1",
     "jsonld": "^0.4.12",
+    "language-tags": "^1.0.5",
     "n3": "^0.11.1",
     "org-layouts": "^1.0.0",
     "org-shell": "^1.0.0",
