--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -36,6 +36,6 @@
     "respin": "^1.0.1",
     "spark-md5": "^3.0.0",
     "through2": "^2.0.3",
-    "union-type": "^0.4.0"
+    "union-type": "github:ptgolden/union-type"
   }
 }
