--- a/modules/periodo-ui/package.json
+++ b/modules/periodo-ui/package.json
@@ -28,6 +28,6 @@
     "react-autosuggest": "^9.3.2",
     "react-dom": "^16.2.0",
     "react-hyperscript": "github:periodo/react-hyperscript",
-    "union-type": "^0.4.0"
+    "union-type": "github:ptgolden/union-type"
   }
 }
