--- a/modules/periodo-ui/package.json
+++ b/modules/periodo-ui/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "axs": "^1.0.6",
     "axs-ui": "^1.0.4",
+    "clean-tag": "^1.0.4",
     "diff-match-patch": "^1.0.0",
     "fast-json-patch": "^2.0.4",
     "language-tags": "^1.0.5",
     "linkify-it": "^2.0.3",
+    "open-color": "1.6.3",
     "org-shell": "^1.0.0",
     "periodo-utils": "^5.0.0-pre2",
     "ramda": "^0.24.1",
@@ -28,6 +30,9 @@
     "react-autosuggest": "^9.3.2",
     "react-dom": "^16.2.0",
     "react-hyperscript": "github:periodo/react-hyperscript",
+    "system-components": "^2.0.3",
+    "styled-components": "^3.2.6",
+    "styled-system": "^2.2.5",
     "union-type": "github:ptgolden/union-type"
   }
 }
