--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "prepack": "make clean && make",
-    "test": "tape $(find modules -path */test/*.js -not -path */node_modules/*)",
+    "test": "NO_DEFAULT_BACKEND=1 tape $(find modules -path */test/*.js -not -path */node_modules/*)",
     "start": "serve -p 8000"
   }
 }
