--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -11,6 +11,7 @@
     "diff-match-patch": "^1.0.0",
     "fast-json-patch": "^2.0.4",
     "fastclick": "^1.0.6",
+    "file-saver": "^1.3.8",
     "from2-array": "0.0.4",
     "identifiers-doi": "^0.2.1",
     "json-pointer": "^0.6.0",
