--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -14,6 +14,7 @@
     "file-saver": "^1.3.8",
     "from2-array": "0.0.4",
     "identifiers-doi": "^0.2.1",
+    "is-url": "^1.2.4",
     "json-pointer": "^0.6.0",
     "json-stable-stringify": "^1.0.1",
     "jsonld": "^0.4.12",
@@ -24,6 +25,7 @@
     "org-layouts": "^1.0.0",
     "org-shell": "^1.0.0",
     "parse-link-header": "^1.0.1",
+    "periodo-common": "^1.0.0",
     "periodo-date-parser": "^1.0.1",
     "periodo-ui": "^1.0.0",
     "periodo-utils": "^5.0.0-pre2",
