Upgrade to newest versions of jsonld and n3 libs

--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -17,10 +17,10 @@
     "is-url": "^1.2.4",
     "json-pointer": "^0.6.0",
     "json-stable-stringify": "^1.0.1",
-    "jsonld": "^0.4.12",
+    "jsonld": "^1.0.4",
     "language-tags": "^1.0.5",
     "lov-ns": "^1.1.1",
-    "n3": "^0.11.1",
+    "n3": "^1.0.0-beta.1",
     "org-async-actions": "^1.0.0",
     "org-layouts": "^1.0.0",
     "org-shell": "^1.0.0",
