--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -23,6 +23,7 @@
     "n3": "^1.0.0-beta.1",
     "org-async-actions": "^1.0.0",
     "org-layouts": "^1.0.0",
+    "org-n3-utils": "^0.1.0",
     "org-shell": "^1.0.0",
     "parse-link-header": "^1.0.1",
     "periodo-common": "^1.0.0",
