--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "periodo-app",
-  "version": "3.0.0-pre",
+  "version": "3.0.0-pre.0",
   "private": true,
   "description": "React application for browsing and editing PeriodO data",
   "main": "src/index.js",
@@ -22,14 +22,14 @@
     "lov-ns": "^1.1.1",
     "n3": "^1.0.0-beta.1",
     "org-async-actions": "^1.0.0",
-    "org-layouts": "^1.0.0",
-    "org-n3-utils": "^0.1.0",
+    "org-layouts": "^1.0.1",
+    "org-n3-utils": "^1.0.0",
     "org-shell": "^1.0.0",
     "parse-link-header": "^1.0.1",
     "periodo-common": "^1.0.0",
     "periodo-date-parser": "^1.0.1",
-    "periodo-ui": "^1.0.0",
-    "periodo-utils": "^5.0.0-pre2",
+    "periodo-ui": "^1.1.0",
+    "periodo-utils": "^5.0.0",
     "prop-types": "^15.5.10",
     "ramda": "^0.24.1",
     "react": "^16.2.0",
