--- a/modules/org-layouts/package.json
+++ b/modules/org-layouts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "org-layouts",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "description": "",
   "main": "src/index.js",
@@ -13,8 +13,8 @@
   "dependencies": {
     "debounce": "^1.0.2",
     "natsort": "^1.0.6",
-    "periodo-ui": "^1.0.0",
-    "periodo-utils": "^5.0.0-pre2",
+    "periodo-ui": "^1.1.0",
+    "periodo-utils": "^5.0.0",
     "prop-types": "^15.5.10",
     "querystring-browser": "^1.0.4",
     "ramda": "^0.24.1",
