--- a/modules/periodo-ui/package.json
+++ b/modules/periodo-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "periodo-ui",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "description": "",
   "main": "src/index.js",
@@ -22,16 +22,16 @@
     "open-color": "1.6.3",
     "org-shell": "^1.0.0",
     "periodo-common": "^1.0.0",
-    "periodo-utils": "^5.0.0-pre2",
+    "periodo-utils": "^5.0.0",
     "ramda": "^0.24.1",
     "react": "^16.2.0",
     "react-aria-menubutton": "^5.0.2",
     "react-autosuggest": "^9.3.2",
     "react-dom": "^16.2.0",
     "react-hyperscript": "github:periodo/react-hyperscript",
-    "system-components": "^2.0.3",
     "styled-components": "^3.2.6",
     "styled-system": "^2.2.5",
+    "system-components": "^2.0.3",
     "union-type": "github:ptgolden/union-type"
   }
 }
