enable all ECMAScript 6 features except for modules

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
   },
   "env": {
     "node": true,
-    "browser": true
+    "browser": true,
+    "es6": true
   },
   "rules": {
     "comma-dangle": 0,
