Improve Makefile, add missing package.json fields
All working files are now sent to the dist/ directory instead of
populating the root directory. NPM publish is run in a separate
directory than the root directory, so that we only include the files we
want, from a known good archive.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 *.swp
 node_modules/
 modules/**/node_modules/
+periodo-client.js
 dist/*
-/periodo-client*.js
-/periodo-client*.js.map
-index.html
 .DS_Store
