--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "blue-tape": "^1.0.0",
     "browserify": "^16.2.3",
     "common-shakeify": "^0.5.0",
+    "envify": "^4.1.0",
     "exorcist": "^1.0.1",
     "fake-indexeddb": "^2.0.4",
     "lerna": "^3.14.1",
@@ -28,6 +29,7 @@
   },
   "browserify": {
     "transform": [
+      "envify",
       "common-shakeify"
     ]
   },
