--- a/modules/periodo-ui/package.json
+++ b/modules/periodo-ui/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "glsl-hsl2rgb": "^1.1.0",
     "tape": "^4.8.0"
   },
   "dependencies": {
@@ -19,10 +20,10 @@
     "diff-match-patch": "^1.0.0",
     "earth-mesh": "^2.1.0",
     "fast-json-patch": "^2.0.4",
+    "glslify": "^7.0.0",
     "language-tags": "^1.0.5",
     "linkify-it": "^2.0.3",
     "mixmap": "^1.5.2",
-    "mixmap-tiles": "^1.1.2",
     "mixmap-zoom": "^1.0.0",
     "open-color": "1.6.3",
     "org-shell": "^1.0.0",
@@ -35,9 +36,15 @@
     "react-dom": "^16.2.0",
     "react-hyperscript": "github:periodo/react-hyperscript",
     "regl": "^1.3.11",
+    "resl": "^1.0.3",
     "styled-components": "^3.2.6",
     "styled-system": "^2.2.5",
     "system-components": "^2.0.3",
     "union-type": "github:ptgolden/union-type"
+  },
+  "browserify": {
+    "transform": [
+      "glslify"
+    ]
   }
 }
