--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -42,6 +42,7 @@
     "respin": "^1.0.1",
     "spark-md5": "^3.0.0",
     "through2": "^2.0.3",
-    "union-type": "github:ptgolden/union-type"
+    "union-type": "github:ptgolden/union-type",
+    "webworkify": "^1.5.0"
   }
 }
