--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -40,6 +40,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "respin": "^1.0.1",
+    "shallow-equal": "^1.2.0",
     "spark-md5": "^3.0.0",
     "union-type": "github:ptgolden/union-type",
     "webworkify": "^1.5.0"
