--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -42,6 +42,7 @@
     "respin": "^1.0.1",
     "shallow-equal": "^1.2.0",
     "spark-md5": "^3.0.0",
+    "throttle-debounce": "^2.1.0",
     "union-type": "github:ptgolden/union-type",
     "webworkify": "^1.5.0"
   }
