--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "periodo-client",
-  "version": "4.0.0-15",
+  "version": "4.0.0",
   "author": "Patrick Golden <ptgolden@email.unc.edu>",
   "contributors": [
     "Ryan Shaw <ryanshaw@unc.edu>"
