--- a/modules/periodo-app/package.json
+++ b/modules/periodo-app/package.json
@@ -7,6 +7,7 @@
   "license": "CC0",
   "dependencies": {
     "d3": "^4.10.0",
+    "debounce": "^1.0.2",
     "dexie": "^1.5.1",
     "fast-json-patch": "^2.0.4",
     "fastclick": "^1.0.6",
@@ -41,6 +42,8 @@
     "respin": "^1.0.1",
     "shallow-equal": "^1.2.0",
     "spark-md5": "^3.0.0",
+    "styled-components": "^3.2.6",
+    "styled-system": "^2.2.5",
     "transliteration": "2.1.3",
     "union-type": "github:ptgolden/union-type",
     "webworkify": "^1.5.0"
