--- a/modules/periodo-common/package.json
+++ b/modules/periodo-common/package.json
@@ -4,16 +4,11 @@
   "private": true,
   "description": "",
   "main": "src/index.js",
-  "scripts": {
-    "test": "tape test/*.js"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "tape": "^4.8.0"
-  },
   "dependencies": {
+    "react": "^16.2.0",
     "react-hyperscript": "github:periodo/react-hyperscript",
     "union-type": "github:ptgolden/union-type"
   }
