--- a/modules/periodo-ui/package.json
+++ b/modules/periodo-ui/package.json
@@ -32,6 +32,7 @@
     "react": "^16.2.0",
     "react-aria-menubutton": "^5.0.2",
     "react-autosuggest": "^9.3.2",
+    "react-compound-slider": "^0.16.3",
     "react-dom": "^16.2.0",
     "react-hyperscript": "github:periodo/react-hyperscript",
     "regl": "^1.3.11",
